	* Libmobius: Changed model::item::remove_datasource method to log item event
	* Libmobius: Changed model::item::set_attribute method to log item event
	* Libmobius: Changed model::item::remove_attribute method to log item event
	* Libmobius: Changed model::item::new_child method to log item event
	* Libmobius: Changed database::transaction to allow consecutive transactions at the same level
	* Python API: Added new class model.event
	* Python API: Added new method model.item.add_event
	* Python API: Added new method model.item.get_events
	* app-ares: Changed to log item events
	* app-emuletorrent: Changed to log item events
	* app-shareaza: Changed to log item events
	* app-shareaza: Changed to decode torrent data from CBTInfo structure
	* ice: Added support for view-groups
	* evidence-viewer: Changed to add icon view to view-group
	* evidence-viewer: Changed to add list view to view-group
	* evidence-viewer: Changed to add navigation view to view-group
	* evidence-viewer: Added processing view
	* evidence-viewer: Removed main view

Mobius Forensic Toolkit 2.12
	* configure.ac: Changed to check for libxml2
	* Libmobius: Added new class decoder::xml::dom
	* Libmobius: Added new class decoder::xml::element
	* Libmobius: Added new method decoder::mfc::seek
	* Libmobius: Added new method decoder::mfc::tell
	* Libmobius: Added new method decoder::mfc::get_size
	* Libmobius: Added new method decoder::mfc::get_ipv6
	* Libmobius: Added new function string::first_of
	* Libmobius: Added new method io::walker::get_file_by_name
	* Libmobius: Changed database::database class to initialize and shutdown sqlite3 lib
	* Libmobius: Added new class io::tempfile
	* Libmobius: Added new function io::set_tempdir_path
	* Libmobius: Added new method io::uri::get_port_number
	* app-shareaza: Changed to retrieve autofill data
	* app-shareaza: Changed to retrieve user-accounts
	* app-shareaza: Changed to retrieve local-files
	* app-shareaza: Changed to retrieve p2p-remote-files